--- a/main.css
+++ b/main.css
@@ -593,7 +593,7 @@ margin-bottom: 20px;
     position: relative; 
     overflow: auto; 
     //float: left; 
-    width: 90%;
+    width: 98%;
     margin-left: auto;
     margin-right: auto;
     border-bottom-left-radius: 5px;
@@ -614,5 +614,12 @@ background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(68,141,214,0.75) 1
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#bf448dd6',GradientType=0 ); /* IE6-9 */
 
 }
-    .banner li { list-style: none; }
-        .banner ul li { float: left; }
+    .banner li { 
+        list-style: none; 
+        height: 365px;
+
+    }
+        .banner ul li { 
+            float: left; 
+            //width: 100%;
+        }
